Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}

{{ $NEXT }}

- Fixed search for related columns overwriting existing params in generate_column_parameters

2.002001  2010-04-01 01:41:11 Europe/Berlin

- Remove debugging code and other noise from tests
- Fixed some typos and code cleanups
- Added possibility to fetch a single object by id + tests using 'item'
- Added item_root attribute which defaults to 'data' and is used as data root for 'item'
- Break out bulk actions into their own methods for RPC
- Restore identifer vs. no identifer for REST chains
- Chain dispatching has now been fixed to not be as hackish as before
- Shift around where the current result set is set. setup() now does /nothing/ by default other than be a chain anchor
- Tests added for updating related keys via REST
- generate_rs is now used to get the default resultset inside inflate_request
- No longer uses Catalyst::Action::REST to do dispatching instead uses ActionRole and MatchRequestMethod
- PLEASE THOROUGHLY TEST AS SOME BEHAVIOR MAY HAVE BEEN ALTERED SUBTLY WHEN DEALING WITH BULK vs SINGLE ACTIONS

2.001003  2010-02-12 19:01:56 America/Chicago

- Fill out some coercions to allow more complex search criteria (like sort order)
- Promote the helper functions into full methods
- Allow iterative customization by breaking down the save_objects into several discrete steps
- Make sure those steps also include $c

2.001002  2010-02-09 01:01:57 America/Chicago

- Fixed missing requirement for MooseX::Types::Structured
- Fixed MooseX::Aliases usage (we don't any more)
- Object inflation during end was broken out into its own method: each_object_inflate
- Enable offset based paging

2.001001
**************************************************************
** THIS RELEASE GUARANTEES TO BREAK BACKWARDS COMPATIBILITY **
**************************************************************

- Merge create and update into update_or_create
- object is much advanced now: