@@ -3,6 +3,8 @@ Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}
 {{ $NEXT }}
 
 - Fixed search for related columns overwriting existing params in generate_column_parameters
+- Use column accessor for updating an existing object instead of passing the new values to update.
+  This enables the column accessors to do additional work (for example with method modifiers).
 
 2.002001  2010-04-01 01:41:11 Europe/Berlin
 
